Trying to make sure the align class is always set for the figure tag.

--- a/docroot/themes/custom/epa_intranet/assets/scss/global.scss
+++ b/docroot/themes/custom/epa_intranet/assets/scss/global.scss
@@ -1302,10 +1302,6 @@ div.box__title, .box--special > .box__title {
 }
 
 /* IN-851 Image alignment breaks when adding a caption */
-figure.caption {
-    display: flex;
-    flex-direction: column;
-}
 article {
   &.align-center + figcaption {
     text-align: center;
